examples/test/testpolicy1697.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1697
  namespace: namespace364
spec:
  podSelector:
    matchLabels:
      key17: value45
      key46: value11
      key22: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value45
          key18: value35
          key13: value23
      podSelector:
        matchLabels:
          key13: value28
